2009-10-23  Robert Story <Robert.Story@cobham.com>

	* ResMgr.cc: check is_nil for numeric settings, prevents core dump
	  when accessing inexisting settings.
	* resource.cc, Resolver.cc, Resolver.h: add dnssec support.

2009-10-23  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc: use strtoll for signed numbers.

2009-10-16  Daniel Fazekas <fdsoft@gmail.com>

	* FileSetOutput.cc: fixed buffer size for human_readable.

2009-10-09  Alexander V. Lukyanov <lav@yars.free.net>

	* mgetJob.cc: better error messages; fixed exit code.
	* FileGlob.cc better error handling.
	* FileSet.cc, MirrorJob.cc: get rid of HAVE_LSTAT.
	* lftp_ssl.cc: include string.h

2009-09-23  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: show tracker timer time left; don't connect
	  to passive peers; show torrent name as context.

2009-09-17  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, ChmodJob.cc: add missing headers for NetBSD.

2009-09-16  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: fixed DataRecoder for the case of failed iconv_open;
	  retry iconv_open without //TRANSLIT.

2009-09-15  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: fixed tilde handling.
	* FtpListInfo.cc: ignore 'Status of' line.
	* Torrent.cc: don't reset activity timer on connect (the peer may
	  disconnect immediately).
	* ftpclass.cc, network.cc, network.h: don't bind data socket to
	  default address (fixes an infinite bind loop).

2009-08-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Speedometer.cc, Speedometer.h: (GetStrS) return "" when not valid.
	* Torrent.cc, Torrent.h: better peer status; better traffic balance
	  between different torrents; handle IO-buffer errors; add settings
	  closure - name of the torrent; push uploaded data faster.

2009-08-11  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: (print_cmd_index) better formatting.
	* CopyJob.h: pass FileTimestamp correctly.
	* FileCopy.cc: fix prec comparision.
