@@ -45,6 +45,10 @@
 # include <resolv.h>
 #endif
 
+#ifdef DNSSEC_LOCAL_VALIDATION
+# include "validator/validator.h"
+#endif
+
 #include "xstring.h"
 #include "ResMgr.h"
 #include "log.h"
@@ -93,9 +97,6 @@ static const address_family af_list[]=
 };
 
 ResolverCache *Resolver::cache;
-#ifdef DNSSEC_LOCAL_VALIDATION
-val_context_t *Resolver::val_context = NULL;
-#endif
 
 
 Resolver::Resolver(const char *h,const char *p,const char *defp,
@@ -113,12 +114,6 @@ Resolver::Resolver(const char *h,const char *p,const char *defp,
    error=0;
 
    no_cache=false;
-
-#ifdef DNSSEC_LOCAL_VALIDATION
-   if (VAL_NO_ERROR != val_create_context(NULL, &val_context)) {
-        val_log(NULL, LOG_ERR, "Cannot create validator context.");
-    }
-#endif
 }
 
 Resolver::~Resolver()
@@ -133,13 +128,6 @@ Resolver::~Resolver()
       w->Kill(SIGKILL);
       w.borrow()->Auto();
    }
-
-#ifdef DNSSEC_LOCAL_VALIDATION
-   val_free_context(val_context);
-
-   free_validator_state();
-#endif
-
 }
 
 int   Resolver::Do()
@@ -516,10 +504,10 @@ void Resolver::LookupSRV_RR()
 	 break;
 #else
       val_status_t val_status;
-      int          require_trust = ResMgr::Query("dns:strict-dnssec",hostname);
-      len=val_res_search(val_context,srv_name, C_IN, T_SRV, answer, sizeof(answer), &val_status);
+      bool require_trust = ResMgr::QueryBool("dns:strict-dnssec",hostname);
+      len=val_res_search(NULL, srv_name, C_IN, T_SRV, answer, sizeof(answer), &val_status);
       if(len>=0) {
-          if(require_trust && ! val_istrusted(val_status))
+          if(require_trust && !val_istrusted(val_status))
               return;
           else
               break;
@@ -736,18 +724,15 @@ void Resolver::LookupOne(const char *name)
       ainfo_res	= getaddrinfo(name, NULL, &a_hint, &ainfo);
 #else
       val_status_t val_status;
-      int          require_trust=ResMgr::Query("dns:strict-dnssec",name);
+      bool require_trust=ResMgr::QueryBool("dns:strict-dnssec",name);
       ainfo_res	= val_getaddrinfo(NULL, name, NULL, &a_hint, &ainfo,
                                   &val_status);
-      if((ainfo_res == 0) && ! val_istrusted(val_status) &&
-          require_trust)
-      {
+      if(ainfo_res == 0 && !val_istrusted(val_status) && require_trust) {
           // untrusted answer
           error = _("DNS resoloution not trusted.");
           break;
       }
 #endif
-
 
       if(ainfo_res == 0)
       {
