@@ -1,3 +1,7 @@
+2009-10-26  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* Resolver.cc, Resolver.h: use default dnssec context; cosmetics.
+
 2009-10-23  Robert Story <Robert.Story@cobham.com>
 
 	* ResMgr.cc: check is_nil for numeric settings, prevents core dump
